[project]
name = "chialisp_puzzles"
description = "Some canonical puzzles deployed on chia-blockchain"
authors = [{name = "Richard Kiss", email = "him@richardkiss.com"}]
license = {file = "LICENSE"}
readme = "README.md"
src_root = "."
packages = ["chialisp_puzzles"]
version = "0.1.0"
dependencies = ["chialisp_loader>=0.1.0"]

[build-system]
requires = [
    "pytoml>=0.1",
    "enscons",
    "chialisp_builder @ git+https://github.com/quexington/chialisp_builder@3b1b42e48ecc9e72093368a5725c3ed30c2b5df1#egg=chialisp_builder",
    "chialisp_stdlib>=0.1.0",
    "clvm_rs",
]
build-backend = "enscons.api"
